# LearNexoAI

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
learnexo_content_engine/: .env.example  .gitignore  README.md  api.py  assessment.py  content_generator.py  example_usage.py  learning_path_generator.py  llm_config.py  main.py  models.py  prompts.py  requirements.txt
learnexo_content_engine/app/core/: dependencies.py
learnexo_content_engine/app/routes/: content.py  learning_path.py  learning_style.py  pipeline.py  videos.py
learnexo_content_engine/app/schemas/: learning_style.py  pipeline.py
learnexo_content_engine/app/services/: content_service.py  learning_path_service.py  learning_style_service.py
